# stability

./: .gitignore  README.md  composition.txt  get_cif.py  pyproject.toml  setup.py
convex_hull/: open_phase_diagram.py  phase_diag.py
examples/: README.md  composition.txt  materials.yaml  phase_diagram_examples.py  pourbaix_examples.py
examples/vasp_files/: Ba1Sr7Nb8O24.vasp  Ca1La7Fe8O24.vasp  Cs1Sr7V8O24.vasp  Rb1Ba7Nb8O24.vasp  Sm4Y4Ni8O24.vasp
stability/: __init__.py
stability/convex_hull/: __init__.py  do_vasp.py  do_vasp_calculation.py  get_convex_hull.py  get_energy_above_hull.py  phase_diag_copy.py  phase_diagram.py  phase_diagram_original.py  split_composition.sh
stability/convex_hull/phasediagram/: Anode_Ba8Co8O24.txt  Anode_Ba8Fe8O24.txt  CO2_Ba8Co8O24_X.txt  CO2_Ba8Fe8O24_X.txt  CO2_Ba8Zr8O24_X.txt  Cathode_Ba8Co8O24.txt  Cathode_Ba8Fe8O24.txt  composition.txt  phase_diagram.py
stability/pourbaix/: __init__.py  ase_pourbaix.py  mypourbaix.py  pourbaix.py  pourbaix2.py  requirements.txt
tests/: Ba1Sr7V8O24.vasp  Ba2Ca6Zr8O24.POSCAR  Ba2Sr6Zr8O24.POSCAR  Ba4Sr4Zn7Ce1O24.POSCAR  Ba4Sr4Zr2Al6O24.POSCAR  Ba8Zr8O24.POSCAR  BaZrO3.cif  Cs1Ba7Nb8O24.vasp  Cs1Sr7Nb8O24.vasp  clean.sh  composition.txt  flatmpi.e1564280  print_path.py  run_hokudai.sh  run_tsubame.sh  szaro_data.xlsx  test_get_energy_above_hull.py  test_phase_diagram.py  test_pourbaix.py  ~$szaro_data.xlsx
