[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "stability"
version = "0.0.1"
dependencies = [
    "pymatgen",
    "ase",
    "numpy",
    "mp-api",
]

[tool.setuptools]
packages = ["stability", "stability.convex_hull", "stability.pourbaix"]
[tool.setuptools.package-data]
stability = ["convex_hull/*.sh"]
